k8s-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
---
apiVersion: v1
kind: Pod
metadata:
  name: poi
  namespace: api
  labels:
    app: poi
spec:
  containers:
    - name: poi
      image: registryolq8408.azurecr.io/tripinsights/poi:1.0
      ports:
        - containerPort: 80
      volumeMounts:
      - name: secrets-store-inline
        mountPath: "/mnt/secrets-store"
        readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "azure-kv-open-hack-user-msi"

---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: trips
  namespace: api
  labels:
    app: trips
spec:
  containers:
    - name: trips
      image: registryolq8408.azurecr.io/tripinsights/trips:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: user-java
  namespace: api
  labels:
    app: user-java
spec:
  containers:
    - name: user-java
      image: registryolq8408.azurecr.io/tripinsights/user-java:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: userprofile
  namespace: api
  labels:
    app: userprofile
spec:
  containers:
    - name: userprofile
      image: registryolq8408.azurecr.io/tripinsights/userprofile:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
