k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poi
  labels:
    app: poi
spec:
  containers:
    - name: poi
      image: registryolq8408.azurecr.io/tripinsights/poi:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  type: LoadBalancer
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: trips
  labels:
    app: trips
spec:
  containers:
    - name: trips
      image: registryolq8408.azurecr.io/tripinsights/trips:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
spec:
  type: LoadBalancer
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: userprofile
  labels:
    app: userprofile
spec:
  containers:
    - name: userprofile
      image: registryolq8408.azurecr.io/tripinsights/userprofile:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
spec:
  type: LoadBalancer
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: tripviewer
  labels:
    app: tripviewer
spec:
  containers:
    - name: tripviewer
      image: registryolq8408.azurecr.io/tripinsights/tripviewer:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
spec:
  type: LoadBalancer
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
